force-app/main/default/objects/Address__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the branch details</description>
    <inlineHelpText>Select the branch where the address resides in.</inlineHelpText>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Address</relationshipLabel>
    <relationshipName>Address</relationshipName>
    <type>Lookup</type>
</CustomField>