force-app/main/default/objects/Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Holds the City Name</description>
    <inlineHelpText>Enter the City Name</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>