force-app/main/default/objects/Address__c/fields/ConfirmationNUM__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationNUM__c</fullName>
    <label>Confirmation #</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>