force-app/main/default/objects/Address__c/fields/CreatedFromBP__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromBP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field to indicate that record is created from Bright pattern or not.</description>
    <label>CreatedFromBP</label>
    <type>Checkbox</type>
</CustomField>