force-app/main/default/objects/Address__c/fields/Data_Provider__c.field-meta.xml
<CustomField>
    <fullName>Data_Provider__c</fullName>
    <description>Identify name of the data provider.</description>
    <label>Data Provider</label>
    <length>25</length>
    <type>Text</type>
</CustomField>