force-app/main/default/objects/Address__c/fields/fBranch_Stage__c.field-meta.xml
<CustomField>
    <fullName>fBranch_Stage__c</fullName>
    <formula>Text(Branch__r.Branch_Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fBranch Stage</label>
    <type>Text</type>
</CustomField>