force-app/main/default/objects/Address__c/fields/Full_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Full_Zip_Code__c</fullName>
    <description>Used to store 10 digit zipcode.</description>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>