force-app/main/default/objects/Address__c/fields/fYear_Built__c.field-meta.xml
<CustomField>
    <fullName>fYear_Built__c</fullName>
    <description>used to populate year built value from property</description>
    <label>fYear Built</label>
    <length>4</length>
    <type>Text</type>
</CustomField>