force-app/main/default/objects/Address__c/fields/Home_Type__c.field-meta.xml
<CustomField>
    <fullName>Home_Type__c</fullName>
    <description>Describes the type of home that the person needs.</description>
    <inlineHelpText>Specify the type of home.</inlineHelpText>
    <label>Home Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>MF</fullName>
            </value>
            <value>
                <fullName>MH</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>User Created</fullName>
                <default>true</default>
                <label>User Created</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>