force-app/main/default/objects/Address__c/fields/Invalid__c.field-meta.xml
<CustomField>
    <fullName>Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It holds true or false value</description>
    <label>Invalid</label>
    <type>Checkbox</type>
</CustomField>