force-app/main/default/objects/Address__c/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <label>MSA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Austin-Round Rock-San Marcos TX</fullName>
            </value>
            <value>
                <fullName>Bakersfield Ca</fullName>
            </value>
            <value>
                <fullName>Dallas-Fort Worth-Arlington TX</fullName>
            </value>
            <value>
                <fullName>Houston-Sugar Land-Baytown TX</fullName>
            </value>
            <value>
                <fullName>Killeen-Temple TX</fullName>
            </value>
            <value>
                <fullName>Los Angeles--Riverside--Orange County Ca</fullName>
            </value>
            <value>
                <fullName>Phoenix-Mesa-Glendale AZ</fullName>
            </value>
            <value>
                <fullName>Provo-Orem Ut</fullName>
            </value>
            <value>
                <fullName>Salt Lake City-Ogden Ut</fullName>
            </value>
            <value>
                <fullName>San Antonio-New Braunfels TX</fullName>
            </value>
            <value>
                <fullName>San Diego-Carlsbad-San Marcos Ca</fullName>
            </value>
            <value>
                <fullName>Tucson AZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>