force-app/main/default/objects/Address__c/fields/Region_MD__c.field-meta.xml
<CustomField>
    <fullName>Region_MD__c</fullName>
    <formula>Branch__r.Region_MD__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region MD</label>
    <type>Text</type>
</CustomField>