force-app/main/default/objects/Address__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Holds the street information</description>
    <inlineHelpText>Enter the street information</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>