force-app/main/default/objects/Address__c/fields/Street_Zip__c.field-meta.xml
<CustomField>
    <fullName>Street_Zip__c</fullName>
    <formula>Street__c +&quot; &quot;+ Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street-Zip</label>
    <type>Text</type>
</CustomField>