force-app/main/default/objects/Address__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>It contains combination of primary shipping street, primary shipping city &amp; primary shipping state. eg, &lt;primary shipping street&gt;:&lt;primary shipping city&gt;:&lt;primary shipping state&gt;</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>