force-app/main/default/objects/Address__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Used to store 5 digit zipCode.</description>
    <label>Primary Shipping Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>