force-app/main/default/objects/Address__c/fields/Zip_Plus_Four__c.field-meta.xml
<CustomField>
    <fullName>Zip_Plus_Four__c</fullName>
    <label>Zip Plus Four</label>
    <length>4</length>
    <type>Text</type>
</CustomField>