force-app/main/default/objects/Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>County__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>County__c</field>
        <operation>equals</operation>
        <value>maricopa</value>
    </filters>
    <filters>
        <field>ConfirmationNUM__c</field>
        <operation>equals</operation>
        <value>15501649</value>
    </filters>
    <label>All</label>
</ListView>